--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,9 +9,18 @@
   </head>
 
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-    <script></script>
+    <header>
+      <h1>Buscador de series de anime</h1>
+    </header>
+    <main>
+      <form class="js-form">
+        <input class="js-input-search" type="text">
+        <input class="js-button-search" type="submit" value="Buscar">
+        <input class="js-button-reset" type="submit" value="Reset">
+      </form>
+      <ul class="js-fav-list"></ul>
+      <ul class="js-search-list"></ul>
+    </main>
+    <script type="text/javascript" src="./assets/js/main.js"></script>
   </body>
 </html>
