added subtitles and planification of favorites

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,9 @@
         <input class="js-button-search" type="submit" value="Buscar">
         <input class="js-button-reset" type="submit" value="Reset">
       </form>
+      <h4>Favoritos:</h4>
       <ul class="js-fav-list"></ul>
+      <h4>Resultados de la búsqueda:</h4>
       <ul class="js-search-list"></ul>
     </main>
     <script type="text/javascript" src="./assets/js/main.js"></script>
